<resources>
    <string name="app_name">PetManagerApplication</string>
    <string name="action_settings">Settings</string>
    <string name="calc_age">Age</string>
    <string name="calc_activity">Activity</string>
    <string name="calc_puppy">Puppy</string>
    <string name="calc_adult">Adult</string>
    <string name="calc_senior">Senior</string>
    <string name="calc_active">Active</string>
    <string name="calc_working">Working</string>
    <string name="calc_lazy">Lazy</string>
    <string name="calc_calc">Calculate Food Requirements</string>
    <string name="calc_output">Amount of Food Required</string>
    <string name="cat_neut">Neutered/Nutless</string>
    <string name="cat_intact">Intact</string>
    <string name="cat_obese">Prone to Obesity</string>
    <string name="cat_fat">Weight Loss</string>
    <string name="cat_req">Cat Type/Dietary Requirements</string>
    <string name="cat_info">Use this calculator to work out the recommended daily calorie intake for
        your cat based off its weight. Use this calorie value to work out how many grams of food to give
        your cat.</string>
    <string name="dog_info">Use this calculator to work out the recommended daily calorie intake for
        your dog based off its weight. Different dogs have different dietary intakes so use the
        radio buttons to select the categories appropriate to your dog.</string>
    <string name="exp_total">Total</string>
    <string name="feed_time">Schedule Feeding Times</string>
    <string name="new_time">Schedule New Feeding Time</string>
    <string name="current_time">Current Feeding Times</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_expense">Expense Log</string>
    <string name="walk">Schedule Walking Times</string>
    <string name="new_walk">Schedule New Walking Time</string>
    <string name="curr_walk">Current Walking Times</string>
    <string name="hTitle">Enter expense title</string>
    <string name="hDetail">Enter expense details</string>
    <string name="hCost">Enter expense cost</string>
    <string name="hPet">Which pet is this expense for?</string>
    <string name="sDets">Enter Pet Details</string>
    <string name="sName">Name:</string>
    <string name="sBreed">Breed:</string>
    <string name="sWeight">Weight:</string>
    <string name="sCat">Cat</string>
    <string name="sDog">Dog</string>
</resources>
