<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.williamrussa3.petmanagerapplication.CalculatorActivityDog">

    <TextView
        android:id="@+id/doginfo_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dog_info"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="232dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="56dp"
            android:layout_marginTop="81dp">

            <RadioButton
                android:id="@+id/pubby_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_puppy"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/adult_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_adult"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/senior_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_senior"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/radioGroup"
            android:layout_marginEnd="57dp">

            <RadioButton
                android:id="@+id/active_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_active"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/working_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_working"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/lazy_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc_lazy"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/AgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ActivityTitle"
            android:layout_alignBottom="@+id/ActivityTitle"
            android:layout_alignEnd="@+id/radioGroup"
            android:layout_alignStart="@+id/radioGroup"
            android:text="@string/calc_age"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioGroup3"
            android:layout_alignEnd="@+id/radioGroup3"
            android:layout_alignStart="@+id/radioGroup3"
            android:text="@string/calc_activity"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_calc"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/output_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_output"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

</LinearLayout>
