<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.williamrussa3.petmanagerapplication.CalculatorActivityDog">

    <TextView
        android:id="@+id/info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cat_info"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_weight="0.28">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ReqTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black">

            <RadioButton
                android:id="@+id/noballs_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_neut"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/intact_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_intact"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/obese_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_obese"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/fat_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_fat"
                android:textColor="@android:color/black" />

        </RadioGroup>

        <TextView
            android:id="@+id/ReqTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="44dp"
            android:text="@string/cat_req"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/cat_calc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_calc"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/cat_output_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_output"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>
